// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de citas Agregar una nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-01-2021",
      "hora": "10:30",
      "id": 1610644605294,
      "mascota": "Hook",
      "propietario": "Juan",
      "sintomas": "Solo duerme",
      "telefono": "324234",
    },
  ],
}
`;

exports[`Probar la clase de citas Eliminar cita 1`] = `
Citas {
  "citas": Array [],
}
`;

exports[`Probar la clase de citas actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-01-2021",
      "hora": "10:30",
      "id": 1610644605294,
      "mascota": "Nuevo Nombre",
      "propietario": "Juan",
      "sintomas": "Solo duerme",
      "telefono": "324234",
    },
  ],
}
`;
